Keep member permission service Java 17 compatible